infrastructure/ingress/infra/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
  namespace: ingress-infra
  annotations:
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/private-key-rotation-policy: Always
spec:
  gatewayClassName: contour
  listeners:
    - name: https-wildcard
      protocol: HTTPS
      port: 443
      hostname: "*.ripple-transfer.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ripple-transfer-dev-tls
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "172.18.255.50"
