infrastructure/ingress/infra/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops-dashboard
  namespace: ingress-infra
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "gitops.ripple-transfer.dev"
  rules:
    - backendRefs:
        - name: weave-gitops-dashboard
          namespace: flux-system
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
  namespace: ingress-infra
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "minio.ripple-transfer.dev"
  rules:
    - backendRefs:
        - name: console
          namespace: minio
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: ingress-infra
spec:
  parentRefs:
    - name: tls-gateway
  hostnames:
    - "grafana.ripple-transfer.dev"
  rules:
    - backendRefs:
        - name: grafana
          namespace: grafana
          port: 80
